# redep

./: .gitignore  NOTICE.txt  README.md  pyproject.toml
redep/: __main__.py  cli.py  config.py  init.py  pull.py  push.py  util.py
tests/: test_config.py  test_pull.py  test_push.py  test_util.py
tests/src_dir/: redep.toml
